# Paddle

./: test.py
benchmark/fluid/: fluid_benchmark.py
benchmark/fluid/0718/: mnist_1.txt  mnist_2.txt  resnet_1.txt  resnet_2.txt  vgg_1.txt  vgg_2.txt
benchmark/fluid/flower/: gpu1_mnist.txt  gpu1_vgg.txt  gpu2_mnist.txt  gpu2_vgg.txt
cmake/: configure.cmake  flags.cmake  generic.cmake  operators.cmake
paddle/cuda/include/: hl_gpu_gru.cuh  hl_gpu_lstm.cuh
paddle/cuda/src/: hl_cuda_lstm.cu
paddle/fluid/: CMakeLists.txt
paddle/fluid/framework/: CMakeLists.txt  dim.h  dlpack_tensor.cc  dlpack_tensor_test.cc  executor.cc  garbage_collector.h  init.cc  lod_tensor.h  mixed_vector.h  op_registry.h  operator.cc  operator.h  parallel_executor.cc  parallel_executor.h  tensor.cc  tensor_test.cc  tensor_util.cc  tensor_util.h
paddle/fluid/memory/: memcpy.cc
paddle/fluid/operators/: CMakeLists.txt  affine_channel_op.cu  affine_grid_cudnn_op.cu.cc  arg_max_op.cu  arg_min_op.cu  batch_norm_op.cu  batch_norm_op.cu.cc  bilinear_interp_op.cu  conv_cudnn_op.cu.cc  conv_cudnn_op_cache.h  conv_fusion_op.cu.cc  conv_op.cc  conv_transpose_cudnn_op.cu.cc  conv_transpose_op.cc  cross_entropy_op.cu  dropout_op.cu  dropout_op.h  elementwise_add_op.cu  elementwise_op_function.h  extract_rows_op.cc  grid_sampler_cudnn_op.cu.cc  group_norm_op.cu  interpolate_op.cu  layer_norm_op.h  lookup_table_op.cu  mean_iou_op.cu  mul_op.cu.cc  pad2d_op.cu  parallel_do_op.cc  (+16 more)
paddle/scripts/: paddle_build.sh
paddle/testing/: paddle_gtest_main.cc
python/paddle/fluid/tests/book/: CMakeLists.txt
(+109 files in other folders)
